@@ -88,7 +88,7 @@ void    l_commands_init(void)
 	m_sdesc_init();
 #ifdef SCAN_API
 	m_scan_init();
-	scan_dummy_init();
+/*	scan_dummy_init(); */
 	scan_socks_init();
 #endif
 	module_buffer = &l_commands_info;
@@ -107,7 +107,7 @@ void	l_commands_unload(void)
     m_setident_unload();
     m_sdesc_unload();
 #ifdef SCAN_API
-	scan_dummy_unload();
+/*	scan_dummy_unload(); */
 	scan_socks_unload();
 	m_scan_unload();
 #endif
