@@ -556,3 +556,5 @@ seen. gmtime warning still there
 - Fixed problem with u_int32_t servicesstamps, with SVSMODE and SVS2MODE,
   found by Andrew Church
 - Unknown ban * {}, except * {}, deny * {}, allow * {} are accessible to modules
+- Fixed some scan_socks problems - this needs a good hand with
+  
